deploy: c8bb788038b2115eb5dad2650adf5f3149df4f47

--- a/scss/style.css
+++ b/scss/style.css
@@ -10816,15 +10816,11 @@ body {
   right: 20px;
   width: 6.875rem;
   height: 6.875rem;
-  z-index: 55;
-  -webkit-animation: linear;
-  -webkit-animation-name: run;
-  -webkit-animation-duration: 3s; }
+  z-index: 55; }
   @media (max-width: 575px) {
     #btn-donate {
       width: 3.575rem;
-      height: 3.575rem;
-      -webkit-animation-duration: 2s; } }
+      height: 3.575rem; } }
   @media (min-width: 1400px) {
     #btn-donate {
       bottom: 30%; } }
