--- a/scss/style.css
+++ b/scss/style.css
@@ -9264,34 +9264,6 @@ li.fancybox-thumbs-loading {
   display: none; }
 
 /*=== MEDIA QUERY ===*/
-@font-face {
-  font-family: 'bebas_neue_regular';
-  src: url("../fonts/bebasneue_regular-webfont.woff2") format("woff2"), url("../fonts/bebasneue_regular-webfont.woff") format("woff"); }
-
-@font-face {
-  font-family: 'butlerbold';
-  src: url("../fonts/butler_bold-webfont.woff2") format("woff2"), url("../fonts/butler_bold-webfont.woff") format("woff"); }
-
-/* kaushan-script-regular - latin */
-@font-face {
-  font-family: 'Kaushan Script';
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/kaushan-script-v14-latin-regular.eot");
-  /* IE9 Compat Modes */
-  src: local(""), url("../fonts/kaushan-script-v14-latin-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/kaushan-script-v14-latin-regular.woff2") format("woff2"), url("../fonts/kaushan-script-v14-latin-regular.woff") format("woff"), url("../fonts/kaushan-script-v14-latin-regular.ttf") format("truetype"), url("../fonts/kaushan-script-v14-latin-regular.svg#KaushanScript") format("svg");
-  /* Legacy iOS */ }
-
-/* averia-serif-libre-regular - latin */
-@font-face {
-  font-family: 'Averia Serif Libre';
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/averia-serif-libre-v10-latin-regular.eot");
-  /* IE9 Compat Modes */
-  src: local(""), url("../fonts/averia-serif-libre-v10-latin-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/averia-serif-libre-v10-latin-regular.woff2") format("woff2"), url("../fonts/averia-serif-libre-v10-latin-regular.woff") format("woff"), url("../fonts/averia-serif-libre-v10-latin-regular.ttf") format("truetype"), url("../fonts/averia-serif-libre-v10-latin-regular.svg#AveriaSerifLibre") format("svg");
-  /* Legacy iOS */ }
-
 body {
   line-height: 1.5;
   font-family: "Poppins", sans-serif;
@@ -9762,8 +9734,7 @@ body {
       font-size: 1.3rem; } }
 .products .vv {
   width: 100%;
-  height: 0;
-  padding-bottom: 56.25%; }
+  height: 0; }
 
 .products .video {
   position: absolute;
