--- a/layouts/partials/module/videos.html
+++ b/layouts/partials/module/videos.html
@@ -1,5 +1,5 @@
-<div class="col-12 p-0 mx-5">
-	<div class="row">
+<div class="col-12 p-0 bg-black">
+	<div class="row mx-5">
 	    <div class="row__inner">
 	    	{{range .videos}}
 	    	<div type="button" class=" tile " data-toggle="modal" data-target="#{{.video}}">
