chaneg video padding

--- a/layouts/partials/module/videos.html
+++ b/layouts/partials/module/videos.html
@@ -1,5 +1,5 @@
-<div class="col-12 p-0 bg-black">
-	<div class="rows mx-5">
+<div class="col-12 p-0 bg-black px-5">
+	<div class="rows px-5">
 	    <div class="row__inner">
 	    	{{range .videos}}
 	    	<div type="button" class=" tile " data-toggle="modal" data-target="#{{.video}}">
@@ -10,9 +10,6 @@
 	        <div class="tile__details">
 	          <div class="tile__title">
 	            {{ .text }}
-	          </div>
-	          <div class="tile__title2">
-	            {{ .text_2 }}
 	          </div>
 	        </div>
 	      </div>
