--- a/layouts/_default/blogs.html
+++ b/layouts/_default/blogs.html
@@ -1,6 +1,33 @@
 {{ define "main" }}
-dd
+<style type="text/css">
+	#iFrame1{
+	height: 100vh;
+width: 100%;
+
+}
+</style>
 <div class="container">
-	<iframe src="https://breathelife.org.my/" frameborder="0"></iframe>
+	<iframe src="http://blog.breathelife.org.my/homme.php" id="iFrame1" frameborder="0"></iframe>
 </div>
+<script type="application/javascript">
+
+function resizeIFrameToFitContent( iFrame ) {
+
+    iFrame.width  = iFrame.contentWindow.document.body.scrollWidth;
+    iFrame.height = iFrame.contentWindow.document.body.scrollHeight;
+}
+
+window.addEventListener('DOMContentLoaded', function(e) {
+
+    var iFrame = document.getElementById( 'iFrame1' );
+    resizeIFrameToFitContent( iFrame );
+
+    // or, to resize all iframes:
+    var iframes = document.querySelectorAll("iframe");
+    for( var i = 0; i < iframes.length; i++) {
+        resizeIFrameToFitContent( iframes[i] );
+    }
+} );
+
+</script>
 {{ end }}
