--- a/layouts/_default/blogs.html
+++ b/layouts/_default/blogs.html
@@ -7,7 +7,7 @@ width: 100%;
 }
 </style>
 <div class="container">
-	<iframe src="http://blog.breathelife.org.my/homme.php" id="iFrame1" frameborder="0"></iframe>
+	<iframe src="https://blog.breathelife.org.my/homme.php" id="iFrame1" frameborder="0"></iframe>
 </div>
 <script type="application/javascript">
 
