--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -78,8 +78,8 @@ a:hover {
   left: 0;
   width: 100%;
   font-size: 30px;
-  margin-left: 7px;
-  margin-top: -18px;
+  margin-left: 4px;
+  margin-top: -21px;
   text-align: center;
   z-index: 2;
   color: white;
@@ -106,7 +106,11 @@ a:hover {
 .tile:hover ~ .tile {
   transform: translate3d(125px, 0, 0);
 }
-
+.w3-container img{
+  
+    width: 100%;
+  
+}
 body{
     background: #F3F1F1;
 }
