--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -429,3 +429,9 @@ body{
 @keyframes mymove {
   25% {transform: rotate(25deg);}
 }
+
+#video h3{
+  text-align: center;
+  color: white;
+  margin-top: 2rem;
+}
