--- a/layouts/partials/module/videos.html
+++ b/layouts/partials/module/videos.html
@@ -1,6 +1,6 @@
 <div class="col-12 p-0 bg-black px-5" id="video">
 	<h3>Videos</h3>
-	<div class="rows px-5">
+	<div class="rows px-lg-5">
 	    <div class="row__inner">
 	    	{{range .videos}}
 
