--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -4,7 +4,7 @@ a:hover,
 a:active,
 a:visited {
   transition: color 150ms;
-  color: #95a5a6;
+  // color: #95a5a6;
   text-decoration: none;
 }
 a:hover {
